<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".AddNote">


        <ImageButton
            android:id="@+id/Save_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/save_image" />

        <ImageButton
            android:id="@+id/favourite_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/Save_image_button"
            app:layout_constraintTop_toTopOf="@+id/Save_image_button"
            app:srcCompat="@drawable/ic_baseline_star_border_24"
            android:contentDescription="@string/favourite_image" />

        <ImageButton
            android:id="@+id/lock_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/favourite_image_button"
            app:layout_constraintTop_toTopOf="@+id/favourite_image_button"
            app:srcCompat="@drawable/ic_baseline_lock_open_24"
            android:contentDescription="@string/lock_image" />

        <ImageButton
            android:id="@+id/color_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/lock_image_button"
            app:layout_constraintTop_toTopOf="@+id/favourite_image_button"
            app:srcCompat="@drawable/ic_baseline_color_lens_24"
            android:contentDescription="@string/change_color" />

        <EditText
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow_button"
            app:layout_constraintVertical_bias="0.0"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_text_view"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/note_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="start|top"
                android:hint="@string/start_typing"
                android:lineSpacingExtra="2dp"
                android:background="@null"
                android:inputType="textMultiLine"
                android:importantForAutofill="no" />
        </ScrollView>

        <ImageButton
            android:id="@+id/back_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription,MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
